fixed navbar again, to list align better on right side of screen

--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body {
 }
 
 #listStyle{
-  margin-left:40%;
+  margin-left:50%;
 }
 
 .navbar {
